docs/gitlab-full/gitlab/ingress-ssh-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-tcp-gitlab-ssh
  namespace: ns-haproxy-master
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app-key: haproxy
    app-env: prod
  ports:
    - name: tcp
      port: 3714
      targetPort: 3714
      nodePort: 3714 # Доступно на ВСЕХ Node в Cluster
