docs/gitlab-full/gitlab/install.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab
spec:
  replicas: 1
  strategy:
    type: "Recreate"
  selector:
    matchLabels:
      app-key: gitlab
      app-env: prod
  template:
    metadata:
      labels:
        app-key: gitlab
        app-env: prod
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      volumes:
        - name: gitlab-config-data
          persistentVolumeClaim:
            claimName: pvc-lh-gitlab-config-data
        - name: gitlab-data
          persistentVolumeClaim:
            claimName: pvc-lh-gitlab-data
        - name: gitlab-log-data
          persistentVolumeClaim:
            claimName: pvc-lh-gitlab-log-data
      containers:
        - name: gitlab
          image: gitlab/gitlab-ce:16.11.10-ce.0
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
            - name: registry
              containerPort: 81
              protocol: TCP
            - name: pages
              containerPort: 82
              protocol: TCP
            - name: ssh
              containerPort: 22
              protocol: TCP
          volumeMounts:
            - name: gitlab-config-data
              mountPath: /etc/gitlab
              subPath: some-data
            - name: gitlab-data
              mountPath: /var/opt/gitlab
              subPath: some-data
            - name: gitlab-log-data
              mountPath: /var/log/gitlab
              subPath: some-data
          resources:
            limits:
              memory: 3G
            requests:
              memory: 2G
---
apiVersion: v1
kind: Service
metadata:
  name: svc-gitlab
  namespace: gitlab
spec:
  type: ClusterIP
  selector:
    app-key: gitlab
    app-env: prod
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: web
    - port: 81
      targetPort: 81
      protocol: TCP
      name: registry
    - port: 82
      targetPort: 82
      protocol: TCP
      name: pages
    - port: 22
      targetPort: 22
      protocol: TCP
      name: ssh
